@startuml
class Settings {
    + ColumnSettings : Dictionary<string, ColumnHeader>
    + FieldSettings : Dictionary<string, InputType>
}
class InputType {
    + type : string <<get>> <<set>>
    + displayLabel : string <<get>> <<set>>
    + editable : bool <<get>> <<set>>
    + primaryKey : bool <<get>> <<set>>
    + toolTip : string <<get>> <<set>>
}
class "DropdownInputType`1"<T> {
    + options : List<DropdownOption<T>> <<get>> <<set>>
}
class DropdownInputType {
    + options : List<DropdownOption> <<get>> <<set>>
}
class "DropdownOption`1"<T> {
    + value : T <<get>> <<set>>
    + label : string <<get>> <<set>>
}
class DropdownOption {
    + value : string <<get>> <<set>>
    + label : string <<get>> <<set>>
}
class ColumnHeader {
    + displayHeader : string <<get>> <<set>>
}
InputType <|-- "DropdownInputType`1"
InputType <|-- DropdownInputType
@enduml
